# elias_seokjeon

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
client/: Cargo.toml  assets.json  build.rs  index.html
client/src/: collider.rs  main.rs  resizable_font.rs  translatable_text.rs  web.rs
client/src/assets/: atlas.rs  collider.rs  config.rs  locale.rs  mod.rs  path.rs  skeleton.rs  sound.rs  spine.rs  texture.rs  texture_atlas.rs
client/src/assets/path/: butter.rs  hero.rs  kommy.rs  mod.rs  sound.rs
client/src/level/: constants.rs  error.rs  mod.rs  resource.rs  setup.rs  system.rs  types.rs  utils.rs
client/src/level/core/: connect.rs  error.rs  mod.rs  setup.rs
client/src/level/in_game/: init.rs  load.rs  mod.rs  switch.rs
client/src/level/in_game/enter/: init.rs  load.rs  mod.rs  switch.rs
client/src/level/in_game/message/: init.rs  mod.rs  switch.rs
client/src/level/in_game/prepare/: init.rs  mod.rs  switch.rs
client/src/level/in_game/result/: init.rs  mod.rs
client/src/level/in_game/result/switch/: defeat.rs  draw.rs  mod.rs  victory.rs
client/src/level/matching/: init.rs  mod.rs  switch.rs
client/src/level/matching/cancel/: init.rs  mod.rs  switch.rs
client/src/level/option/: init.rs  mod.rs  switch.rs
client/src/level/title/: init.rs  load.rs  mod.rs
client/src/level/title/leader_board/: init.rs  mod.rs  switch.rs
client/src/level/title/message/: init.rs  mod.rs  switch.rs
docs/: elias_seokjeon.js  index.html
docs/assets/: config.json
docs/assets/locale/: en.json  ja.json  ko.json
docs/assets/models/Alice/: Alice.model  Alice.s_atlas  Alice.s_skel  Alice.texture
docs/assets/models/Amelia/: Amelia.model  Amelia.s_atlas  Amelia.s_skel  Amelia.texture
docs/assets/models/Ashur/: Ashur.model  Ashur.s_atlas  Ashur.s_skel  Ashur.texture
docs/assets/models/Belita/: Belita.model  Belita.s_atlas  Belita.s_skel  Belita.texture
docs/assets/models/Beni/: Beni.model  Beni.s_atlas  Beni.s_skel  Beni.texture
docs/assets/models/BigWood/: BigWood.model  BigWood.texture
docs/assets/models/Butter/: Butter.s_atlas  Butter.s_skel
docs/assets/models/Canna/: Canna.model  Canna.s_atlas  Canna.s_skel  Canna.texture
docs/assets/models/Chloe/: Chloe.model  Chloe.s_atlas  Chloe.s_skel  Chloe.texture
docs/assets/models/Daya/: Daya.model  Daya.s_atlas  Daya.s_skel  Daya.texture
docs/assets/models/Diana/: Diana.model  Diana.s_atlas  Diana.s_skel  Diana.texture
docs/assets/models/Elena/: Elena.model  Elena.s_atlas  Elena.s_skel  Elena.texture
docs/assets/models/Epica/: Epica.model  Epica.s_atlas  Epica.s_skel  Epica.texture
docs/assets/models/Erpin/: Erpin.model
docs/assets/models/Espi/: Espi.model  Espi.s_atlas  Espi.s_skel  Espi.texture
docs/assets/models/Festa/: Festa.model  Festa.s_atlas  Festa.s_skel  Festa.texture
docs/assets/models/Fricle/: Fricle.model  Fricle.s_atlas  Fricle.s_skel  Fricle.texture
docs/assets/models/Gabia/: Gabia.model  Gabia.s_atlas  Gabia.s_skel  Gabia.texture
docs/assets/models/Hilde/: Hilde.model  Hilde.s_atlas  Hilde.s_skel  Hilde.texture
docs/assets/models/Ifrit/: Ifrit.model  Ifrit.s_atlas  Ifrit.s_skel  Ifrit.texture
docs/assets/models/Jade/: Jade.model  Jade.s_atlas  Jade.s_skel  Jade.texture
docs/assets/models/Jubee/: Jubee.model  Jubee.s_atlas  Jubee.s_skel  Jubee.texture
docs/assets/models/Kidian/: Kidian.model  Kidian.s_atlas  Kidian.s_skel
docs/assets/models/Kommy/: Kommy.model  Kommy.s_skel  Kommy.texture
docs/assets/models/Leets/: Leets.model  Leets.s_atlas  Leets.s_skel  Leets.texture
docs/assets/models/Levi/: Levi.model  Levi.s_atlas  Levi.s_skel  Levi.texture
docs/assets/models/MaestroMK2/: MaestroMK2.model  MaestroMK2.s_atlas  MaestroMK2.s_skel  MaestroMK2.texture
docs/assets/models/Marie/: Marie.model  Marie.s_atlas  Marie.s_skel  Marie.texture
docs/assets/models/Mayo/: Mayo.s_atlas
docs/assets/models/Meluna/: Meluna.model  Meluna.s_atlas  Meluna.s_skel  Meluna.texture
docs/assets/models/Naia/: Naia.model  Naia.s_atlas  Naia.s_skel  Naia.texture
docs/assets/models/Ner/: Ner.model  Ner.s_atlas  Ner.s_skel  Ner.texture
docs/assets/models/Posher/: Posher.model  Posher.s_atlas  Posher.s_skel  Posher.texture
docs/assets/models/Rim/: Rim.model  Rim.s_atlas  Rim.s_skel  Rim.texture
docs/assets/models/Rohne/: Rohne.model  Rohne.s_atlas
docs/assets/models/Rude/: Rude.model  Rude.s_atlas  Rude.s_skel  Rude.texture
docs/assets/models/Rufo/: Rufo.model  (+3 more)
docs/assets/sounds/: BGM_PatchGame.sound  Erpin.sound  SFX_Boxing_Bell.sound  SFX_Cheer.sound  SFX_Common_ButtonDown.sound  SFX_Common_ButtonTouch.sound  SFX_Common_ButtonUp.sound  SFX_Common_PopupButtonTouch.sound  SFX_Common_PopupClose.sound  SFX_Common_PopupToastMessage.sound  SFX_Common_PullCheek.sound  SFX_Common_PullCheekEnd.sound  SFX_Common_Rubbing.sound  SFX_Common_RubbingEnd.sound  SFX_Emoticon_Hit.sound  SFX_FireFail.sound  SFX_InGame_Defeat.sound  SFX_InGame_TimeOver.sound  SFX_InGame_Victory.sound  SFX_PopupBobble.sound  SFX_Swing.sound
docs/assets/textures/: BG_Fairy_0.texture  BG_Fairy_1.texture  BG_Fairy_2.texture  BG_Fairy_3.texture  BG_Fairy_4.texture  Background.texture  FX_Firecartoon.atlas  FX_Firecartoon.texture  Game_Result_Defeat_Icon.texture  Game_Result_Defeat_Text.texture  Game_Result_Draw_Text.texture  Game_Result_Victory_Icon.texture  Game_Result_Victory_Text.texture  Green_Flag.texture  Guide_Gesture.texture  Health_Heart.texture  ID_Panel.atlas  ID_Panel.texture  Ingame_Time_Icon.texture  Label_Deco_0.texture  Label_Deco_1.texture  Label_Deco_2.texture  Loading_Deco.texture  Loading_minimi.atlas  Loading_minimi.texture  PVP_Ingame_VS.texture  Pattern_0.texture  Projectile.texture  Red_Dot.texture  Red_Flag.texture  Wind_Indicator_Arrow.texture  Wind_Indicator_Deco.texture
documents/: 251209_Profiling.pptx
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml  name.txt
server/src/: main.rs  name.rs  stream.rs
server/src/handler/: in_game.rs  init.rs  matching.rs  mod.rs  prepare.rs  sync.rs  title.rs
(+1257 files in other folders)
