[workspace]
members = ["client", "protocol", "server"]
resolver = "3"

[profile.server]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true

[profile.web-client]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
