[package]
name = "elias_seokjeon"
version = "0.1.0"
edition = "2024"
authors = ["HK416 <powerspirit127@gmail.com>"]
description = "A fan-made game based on Trickcal: Chibi Go."
license = "MIT OR Apache-2.0"
repository = "https://github.com/HK416/elias_seokjeon"
readme = "README.md"
publish = false

[build-dependencies]
aes-gcm = "0.10"
fs_extra = "1.3"
rand = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
bevy_spine = { git = "https://github.com/HK416/bevy_spine", branch = "v17" }
bevy_vector_shapes = "0.11"
const_format = "0.2"
flume = "0.12"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1"
thiserror = "2"

protocol = { path = "../protocol" }

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "std",
    "async_executor",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_input_focus",
    "bevy_log",
    "bevy_render",
    "bevy_mesh",
    "bevy_camera",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "png",
    "vorbis",
    "webgl2",
    "web",
]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioParam",
    "CloseEvent",
    "ErrorEvent",
    "GainNode",
    "MessageEvent",
    "Storage",
    "WebSocket", 
    "BinaryType",
    "Window",
] }
js-sys = "0.3"

[features]
default = []
no-debugging-log = []
no-debugging-gizmo = []
no-debugging-title = []
product-build = ["no-debugging-log", "no-debugging-gizmo", "no-debugging-title"]
