[package]
name = "protocol"
version = "0.1.0"
edition = "2024"
authors = ["HK416 <powerspirit127@gmail.com>"]
description = "A fan-made game based on Trickcal: Chibi Go."
license = "MIT OR Apache-2.0"
repository = "https://github.com/HK416/elias_seokjeon"
readme = "README.md"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.18", features = ["fast-rng", "v4", "serde"] }
