[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["HK416 <powerspirit127@gmail.com>"]
description = "A fan-made game based on Trickcal: Chibi Go."
license = "MIT OR Apache-2.0"
repository = "https://github.com/HK416/elias_seokjeon"
readme = "README.md"
publish = false

[dependencies]
crossbeam-queue = "0.3"
futures-util = "0.3"
glam = "0.30"
tokio = { version = "1.48",features = ["full"] }
tokio-tungstenite = "0.28"

protocol = { path = "../protocol" }

[features]
default = []
no-debuging-log = []
product = ["no-debuging-log"]
