[package]
name = "server"
version = "0.2.0"
edition = "2024"
authors = ["HK416 <powerspirit127@gmail.com>"]
description = "A fan-made game based on Trickcal: Chibi Go."
license = "MIT OR Apache-2.0"
repository = "https://github.com/HK416/elias_seokjeon"
readme = "README.md"
publish = false

[dependencies]
crossbeam-queue = "0.3"
futures-util = "0.3"
glam = "0.30"
rand = "0.9"
redis = { version = "1.0", features = ["tokio-comp"] }
tikv-jemallocator = "0.6"
tokio = { version = "1.48",features = ["full"] }
tokio-tungstenite = "0.28"

protocol = { path = "../protocol" }

[features]
default = []
no-debugging-log = []
product = ["no-debugging-log"]
